code examples of today are added.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -5682,6 +5682,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day10 ; 5.10.2016; Taipeh"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -6448,6 +6455,783 @@
    "source": [
     "!javac TestAssertion.java\n",
     "!java -ea TestAssertion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day11 ; 6.10.2016; Taipeh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestAbstract.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestAbstract.java\n",
+    "\n",
+    "abstract class Company {\n",
+    "\n",
+    "    abstract void calFuel();\n",
+    "    abstract void calDistance();\n",
+    "}\n",
+    "\n",
+    "\n",
+    "class Truck extends Company{\n",
+    "    \n",
+    "    void calFuel(){\n",
+    "        System.out.println(\"Truck: add fuel\");\n",
+    "    }\n",
+    "\n",
+    "    void calDistance(){\n",
+    "        System.out.println(\"Truck: calculate the distance\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "\n",
+    "class Ship extends Company{\n",
+    "    \n",
+    "    void calFuel(){\n",
+    "        System.out.println(\"Ship: add fuel\");\n",
+    "    }\n",
+    "\n",
+    "    void calDistance(){\n",
+    "        System.out.println(\"Ship: calculate the distance\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "    \n",
+    "public class TestAbstract{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "            Truck Toyota;\n",
+    "\n",
+    "            Toyota=new Company();\n",
+    "            //Toyota.calFuel();\n",
+    "            //Toyota.calDistance();\n",
+    "\n",
+    "\n",
+    "            Toyota=(Truck)Toyota;\n",
+    "            //Toyota=new Ship();\n",
+    "            //Toyota.calFuel();\n",
+    "            //Toyota.calDistance();\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TestAbstract.java:39: error: Company is abstract; cannot be instantiated\n",
+      "            Toyota=new Company();\n",
+      "                   ^\n",
+      "1 error\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truck: add fuel\n",
+      "Truck: calculate the distance\n",
+      "Ship: add fuel\n",
+      "Ship: calculate the distance\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestAbstract.java\n",
+    "!java TestAbstract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestAbstract.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestAbstract.java\n",
+    "\n",
+    "abstract class Company {\n",
+    "\n",
+    "    abstract void calFuel();\n",
+    "    abstract void calDistance();\n",
+    "}\n",
+    "\n",
+    "\n",
+    "class Truck extends Company{\n",
+    "    \n",
+    "    void calFuel(){\n",
+    "        System.out.println(\"Truck: add fuel\");\n",
+    "    }\n",
+    "\n",
+    "    void calDistance(){\n",
+    "        System.out.println(\"Truck: calculate the distance\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "\n",
+    "class Ship extends Company{\n",
+    "    \n",
+    "    void calFuel(){\n",
+    "        System.out.println(\"Ship: add fuel\");\n",
+    "    }\n",
+    "\n",
+    "    void calDistance(){\n",
+    "        System.out.println(\"Ship: calculate the distance\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "class Processing{\n",
+    "    static void run(Company company){\n",
+    "        company.calFuel();\n",
+    "        company.calDistance();        \n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "    \n",
+    "public class TestAbstract{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "            Processing.run(new Truck());\n",
+    "             Processing.run(new Ship());\n",
+    "        \n",
+    "        }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truck: add fuel\n",
+      "Truck: calculate the distance\n",
+      "Ship: add fuel\n",
+      "Ship: calculate the distance\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestAbstract.java\n",
+    "!java TestAbstract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestInterface.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestInterface.java\n",
+    "\n",
+    "interface Flyer {\n",
+    "\n",
+    "    void takeOff();\n",
+    "    void land();\n",
+    "    void fly();\n",
+    "}\n",
+    "\n",
+    "class Airplane implements Flyer{\n",
+    "\n",
+    "    public void takeOff(){\n",
+    "        System.out.println(\"AirPlane: take off\");\n",
+    "    }\n",
+    "\n",
+    "    public void land(){\n",
+    "        System.out.println(\"AirPlane: land\");\n",
+    "    }\n",
+    "    \n",
+    "    public void fly(){\n",
+    "        System.out.println(\"AirPlane: fly\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    \n",
+    "public class TestInterface{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "        Flyer Flugzeug=new Airplane();\n",
+    "        Flugzeug.takeOff();\n",
+    "        \n",
+    "        }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AirPlane: take off\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestInterface.java\n",
+    "!java TestInterface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://stackoverflow.com/questions/9614708/why-should-we-declare-interface-methods-as-public"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestNesteDClass.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestNesteDClass.java\n",
+    "\n",
+    "class A{\n",
+    "    private String astring=\": a private string in A is printed\";\n",
+    "    void runSayHelloInB(){\n",
+    "        B b1=new B();\n",
+    "        b1.sayHello();\n",
+    "    }\n",
+    "\n",
+    "    class B{\n",
+    "        void sayHello(){\n",
+    "            System.out.println(\"Hello\"+astring);\n",
+    "        } \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class A2{\n",
+    "    private String astring=\": a private string in A2 is printed\";\n",
+    "\n",
+    "    static class B2{\n",
+    "        void sayHello(){\n",
+    "            System.out.println(\"Hello\"+astring);\n",
+    "        } \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "class A3{\n",
+    "    \n",
+    "    public void useB3(){\n",
+    "         private String astring=\": a private string in the method useB3 is printed\";\n",
+    "        class B3{\n",
+    "            public void sayHello(){System.out.println(\"Hello\"+astring);}\n",
+    "                }\n",
+    "        B3 aaa=new B3();\n",
+    "        aaa.sayHello();\n",
+    " \n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class TestNesteDClass{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "        //A a1=new A();\n",
+    "        //a1.runSayHelloInB();\n",
+    "        \n",
+    "        //A.B b1 = a1.new B();\n",
+    "        //b1.sayHello();\n",
+    "\n",
+    "    \n",
+    "        //A2.B2 b2=new A2.B2();\n",
+    "        //b2.sayHello();\n",
+    "        \n",
+    "        //a1.B2.sayHello();   //doesn't work\n",
+    "        \n",
+    "        //A3 a3=new A3();\n",
+    "        //a3.useB3();\n",
+    "        \n",
+    "        }\n",
+    "    \n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TestNesteDClass.java:30: error: illegal start of expression\n",
+      "         private String astring=\": a private string in the method useB3 is printed\";\n",
+      "         ^\n",
+      "1 error\n",
+      "錯誤: 找不到或無法載入主要類別 TestNesteDClass\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestNesteDClass.java\n",
+    "!java TestNesteDClass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting AbstractAnonymousClassTest.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file AbstractAnonymousClassTest.java\n",
+    "\n",
+    "abstract class A{\n",
+    "\n",
+    "        abstract void sayHello();\n",
+    "}\n",
+    "\n",
+    "public class AbstractAnonymousClassTest{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "    new A(){ public void sayHello(){System.out.println(\"Hello\");}  }.sayHello();\n",
+    "    new A(){ public void sayHello(){System.out.println(\"Hi\");}  }.sayHello();\n",
+    "    }\n",
+    "    \n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac AbstractAnonymousClassTest.java\n",
+    "!java AbstractAnonymousClassTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting EnumTest.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file EnumTest.java\n",
+    "\n",
+    "enum Suit{heart, blade, club, diamond}\n",
+    "\n",
+    "public class EnumTest{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "       //Suit a=Suit.blade;\n",
+    "       //System.out.println(a);\n",
+    "\n",
+    "       Suit g[]= Suit.values();\n",
+    "       for (Suit element:g){\n",
+    "           System.out.println(element+\" \"+element.ordinal());\n",
+    "            }\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heart 0\n",
+      "blade 1\n",
+      "club 2\n",
+      "diamond 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac EnumTest.java\n",
+    "!java EnumTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting EnumTest2.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file EnumTest2.java\n",
+    "\n",
+    "enum foods{\n",
+    "    rice, bread(\"bread2\"),frog,spider;\n",
+    "\n",
+    "    \n",
+    "    private foods(){System.out.println(\"no input var for the constructor\");}\n",
+    "    private foods(String astring){\n",
+    "        System.out.println(astring);\n",
+    "    }\n",
+    "    String show(){return \"hi\";}\n",
+    "}\n",
+    "    \n",
+    "\n",
+    "public class EnumTest2{\n",
+    "        \n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "       foods g[]= foods.values();\n",
+    "       for (foods element:g){\n",
+    "           System.out.println(element+\" \"+element.show()+\" \"+element.ordinal() );\n",
+    "            }\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no input var for the constructor\n",
+      "bread2\n",
+      "no input var for the constructor\n",
+      "no input var for the constructor\n",
+      "rice hi 0\n",
+      "bread hi 1\n",
+      "frog hi 2\n",
+      "spider hi 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac EnumTest2.java\n",
+    "!java EnumTest2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestHashSet.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestHashSet.java\n",
+    "\n",
+    "import java.util.HashSet;\n",
+    "\n",
+    "public class TestHashSet{\n",
+    "        \n",
+    "    @SuppressWarnings({\"unchecked\"})\n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "\n",
+    "        HashSet arr=new HashSet();\n",
+    "        arr.add(\"John\");\n",
+    "        arr.add(\"Merry\");\n",
+    "        arr.add(\"John\");\n",
+    "        arr.add(\"Merry\");\n",
+    "        arr.add(new Integer(6));\n",
+    "        arr.add(6);\n",
+    "        arr.add(3.14);\n",
+    "        System.out.println(arr);\n",
+    "        System.out.println();\n",
+    "        }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.14, 6, John, Merry]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestHashSet.java\n",
+    "!java TestHashSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestHashSet2.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestHashSet2.java\n",
+    "\n",
+    "import java.util.HashSet;\n",
+    "\n",
+    "public class TestHashSet2{\n",
+    "        \n",
+    "    @SuppressWarnings({\"unchecked\"})\n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "\n",
+    "        HashSet arr=new HashSet();\n",
+    "        while(arr.size()<6){\n",
+    "            arr.add((int)(Math.random()*49)+1);\n",
+    "        }\n",
+    "        System.out.println(arr);\n",
+    "        System.out.println();\n",
+    "        }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[48, 34, 36, 25, 28, 46]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestHashSet2.java\n",
+    "!java TestHashSet2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestArrayList.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestArrayList.java\n",
+    "\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class TestArrayList{\n",
+    "        \n",
+    "    @SuppressWarnings({\"unchecked\"})\n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "\n",
+    "        ArrayList arr=new ArrayList();\n",
+    "        arr.add(\"John\");\n",
+    "        arr.add(\"Merry\");\n",
+    "        arr.add(\"John\");\n",
+    "        arr.add(\"Merry\");\n",
+    "        arr.add(new Integer(6));\n",
+    "        arr.add(6);\n",
+    "        arr.add(3.14);\n",
+    "        System.out.println(arr);\n",
+    "        System.out.println();\n",
+    "        for(ArrayList elem:arr){\n",
+    "            System.out.println(elem);\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TestArrayList.java:20: error: incompatible types: Object cannot be converted to ArrayList\n",
+      "        for(ArrayList elem:arr){\n",
+      "                           ^\n",
+      "1 error\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[John, Merry, John, Merry, 6, 6, 3.14]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestArrayList.java\n",
+    "!java TestArrayList"
    ]
   },
   {
