some concepts are not fully understood yet...

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -401,8 +401,8 @@
     "{\n",
     "   public static void main(String args[])\n",
     "   {\n",
-    "      CRectangle rect1;           //必須先宣告他，我覺得挺麻煩。\n",
-    "      rect1=new CRectangle();\n",
+    "      CRectangle rect1;           //必須宣告他，我覺得挺麻煩。\n",
+    "      rect1=new CRectangle();     //必須寫new，也是挺麻煩。\n",
     "\n",
     "      rect1.width=20;\n",
     "      rect1.height=15;\n",
@@ -1139,7 +1139,7 @@
     "See an answer in stackoverflow.\n",
     "http://stackoverflow.com/questions/18483470/is-addition-of-byte-converts-to-int-is-because-of-java-language-rules-or-because\n",
     "\n",
-    "#### The issue is that, in, Java, operations on byte will always result in int! (it has some story but I don't want to discuss it now)\n",
+    "#### The issue is that, in, Java, operations on byte will always result in int! (it has some story but I niether want to discuss nor to learn it right now)\n",
     "\n",
     "The compile error we've seen in the previous Java example can be fixed by \"type casting\", as the following:"
    ]
@@ -3015,7 +3015,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, say, we have a private attribute in the class \"Circle\" and we'd like to call it from the class \"testPRivate\":"
+    "Now, say, we have a private attribute in the class \"Circle\" and we'd like to call it from the class \"testPrivate\":"
    ]
   },
   {
@@ -5068,30 +5068,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's see if we can instantiate \"Caaa\" without the need of a constructor:"
+    "Now, I don't want to use the constructor to instantiate \"Caaa\". Let's do it:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now, I'd like to understand the nested classes better. There are two kinds of nested classes:\n",
-    "\n",
-    "#### I. Non-static Nested Classes and II. Static Nested Classes.\n",
-    "\n",
-    "# First of all, let's learn the Non-static Nested Classes:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 28. exercise: a little modification of the previous example (non-static nested classes)"
+    "### 28. exercise: some modifications of the previous example (non-static nested classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -5100,14 +5089,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing app9_16_modified.java\n"
+      "Overwriting app9_16_modified.java\n"
      ]
     }
    ],
    "source": [
     "%%file app9_16_modified.java\n",
-    "public class app9_16_modified\n",
-    "{\n",
+    "public class app9_16_modified{\n",
+    "\n",
     "   void instCaaa(){\n",
     "      Caaa a=new Caaa();\n",
     "      a.set_num(5);\n",
@@ -5115,7 +5104,7 @@
     "\n",
     "   public static void main(String args[])\n",
     "   {\n",
-    "       app9_16 aa =new app9_16();\n",
+    "       app9_16_modified aa =new app9_16_modified();\n",
     "       aa.instCaaa();\n",
     "   }\n",
     "\n",
@@ -5133,7 +5122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -5155,7 +5144,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the way to instantiate a inner class. First instantiate the outer class, then, use the method within the outer class to instantiate the inner class. (or use the constructor of the outer class, as what the author did in e.g.13)"
+    "This is the way to instantiate a inner class. First instantiate the outer class, then, use the method within the outer class to instantiate the inner class. (or use the constructor of the outer class, as what the author did in e.g.13)\n",
+    "\n",
+    "Now, I wonder, there seem to be two possibilities to instantiate only one class: either make the method inside the outer class or the inner class static."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app9_16_modified.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file app9_16_modified.java\n",
+    "public class app9_16_modified{\n",
+    "\n",
+    "   static void instCaaa(){\n",
+    "      Caaa a=new Caaa();\n",
+    "      a.set_num(5);\n",
+    "   }\n",
+    "\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "       app9_16_modified.instCaaa();\n",
+    "   }\n",
+    "\n",
+    "   class Caaa\n",
+    "   {\n",
+    "      int num;\n",
+    "      void set_num(int n)\n",
+    "      {\n",
+    "         num=n;\n",
+    "         System.out.println(\"num= \"+ num);\n",
+    "      }\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "app9_16_modified.java:4: error: non-static variable this cannot be referenced from a static context\n",
+      "      Caaa a=new Caaa();\n",
+      "             ^\n",
+      "1 error\n",
+      "num= 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac app9_16_modified.java\n",
+    "!java app9_16_modified"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I made a mistake, i.e. using static methods to access methods or attributes of an object. This can't be done, since:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Static Methods, by contrast, are ignorant of individual class instances. The static method is similar to a free function in C or C++. It isn't tied to a specific instantiation of the class. This is why they cannot access instance values. There's no instance to take a value from!\n",
+    "\n",
+    ">Static Data is similar to a static method. A value that is declared static has no associated instance. It exists for every instance, and is only declared in a single place in memory. If it ever gets changed, it will change for every instance of that class.\n",
+    "\n",
+    ">A Static Method can access Static Data because they both exist independently of specific instances of a class.\n",
+    "\n",
+    "( from http://programmers.stackexchange.com/questions/211137/why-can-static-methods-only-use-static-data )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only possibility left ( to instantiate only once) , is to make the inner class static: this is the category of static nested classes:"
    ]
   },
   {
@@ -5174,7 +5257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -5193,16 +5276,21 @@
     "\n",
     "   public static void main(String args[])\n",
     "   {\n",
-    "       Caaa.set_num(5);\n",
+    "       //Caaa.set_num(5);\n",
+    "         Caaa.shownothing();\n",
+    "         System.out.println(Caaa.k);\n",
     "   }\n",
     "\n",
     "   static class Caaa\n",
     "   {\n",
-    "      static int num;\n",
-    "      static void set_num(int n)\n",
-    "      {\n",
-    "         num=n;\n",
-    "         System.out.println(\"num= \"+ num);\n",
+    "        static private int k=100;\n",
+    "      //private int num=0;\n",
+    "      //void set_num(int n){\n",
+    "      //   num=n;\n",
+    "      //   System.out.println(\"num= \"+ num);\n",
+    "      //}\n",
+    "      static void shownothing(){\n",
+    "         System.out.println(\"nothing\");\n",
     "      }\n",
     "   }\n",
     "}"
@@ -5210,7 +5298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -5219,7 +5307,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num= 5\r\n"
+      "app9_16_modified.java:12: error: Illegal static declaration in inner class app9_16_modified.Caaa\n",
+      "        static private int k=100;\n",
+      "                           ^\n",
+      "  modifier 'static' is only allowed in constant variable declarations\n",
+      "app9_16_modified.java:18: error: Illegal static declaration in inner class app9_16_modified.Caaa\n",
+      "      static void shownothing(){\n",
+      "                  ^\n",
+      "  modifier 'static' is only allowed in constant variable declarations\n",
+      "2 errors\n",
+      "nothing\n",
+      "100\n"
      ]
     }
    ],
@@ -5229,10 +5327,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is fine. However, if methods within the inner class is not static, we have to instantiate the inner class in order to use those methods:"
+    "This is fine. However, if methods within the inner class is not static, we'll have to instantiate the inner class in order to use those methods:"
    ]
   },
   {
@@ -7247,9 +7354,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
