the notebook is still not clean at the last parts!

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -6047,7 +6047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -6085,7 +6085,7 @@
     "\n",
     "class Cat extends Mammal{\n",
     "\tpublic void happy(){\n",
-    "\t\tSystem.out.println(\"Mouw Mouw happy\");\n",
+    "\t\tSystem.out.println(\"Meow Meow happy\");\n",
     "\t}\n",
     "\t\n",
     "\tpublic void jumpAway(){\n",
@@ -6097,7 +6097,7 @@
     "\n",
     "\t@Override\n",
     "\tpublic void happy() {\n",
-    "        System.out.println(\"Wong Wong happy\");\n",
+    "        System.out.println(\"Moin Moin happy\");\n",
     "\t}\n",
     "\t\n",
     "\tpublic void biteBall() {\n",
@@ -6121,7 +6121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -6130,9 +6130,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mouw Mouw happy\n",
+      "Meow Meow happy\n",
       "Cat Jumps Away.\n",
-      "Wong Wong happy\n",
+      "Moin Moin happy\n",
       "Dog Bites Ball.\n"
      ]
     }
@@ -6216,7 +6216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -6245,7 +6245,10 @@
     "        //@Override\n",
     "        void sayHi(){\n",
     "        System.out.println(\"I'm not going to say hi. I'll say hello.\");\n",
-    "    }\n",
+    "        }\n",
+    "        void sayYo(){\n",
+    "        System.out.println(\"I'm not going to say hi. I'll say Yo.\");\n",
+    "        }\n",
     "}\n",
     "\n",
     "public class TestExtends extends parent {\n",
@@ -6259,6 +6262,7 @@
     "        \n",
     "        child c=(child)b;\n",
     "        c.sayHi();\n",
+    "        c.sayYo();\n",
     "        \n",
     "    }\n",
     "}"
@@ -6266,7 +6270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -6277,7 +6281,8 @@
      "text": [
       "I'm not going to say hi. I'll say hello.\n",
       "GoodBye\n",
-      "I'm not going to say hi. I'll say hello.\n"
+      "I'm not going to say hi. I'll say hello.\n",
+      "I'm not going to say hi. I'll say Yo.\n"
      ]
     }
    ],
