The last part of this notebook is still a mess. In this update, I switched the kernel to Java9 in order to test if the Java-syntax-highlighting works fine on github.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -4983,7 +4983,9 @@
    "source": [
     "#### Now, I'd like to understand the nested classes better. There are two kinds of nested classes:\n",
     "\n",
-    "#### I. Non-static Nested Classes and II. Static Nested Classes.\n",
+    "#### I. Non-static Nested Classes and\n",
+    "\n",
+    "#### II. Static Nested Classes.\n",
     "\n",
     "# First of all, let's learn the Non-static Nested Classes:"
    ]
@@ -5019,12 +5021,7 @@
     "      Caaa aa= new Caaa();\n",
     "      aa.set_num(5);\n",
     "   }\n",
-    "\n",
-    "   public static void main(String args[])\n",
-    "   {\n",
-    "      app9_16 obj=new app9_16();\n",
-    "   }\n",
-    "\n",
+    "    \n",
     "   class Caaa\n",
     "   {\n",
     "      int num;\n",
@@ -5034,6 +5031,12 @@
     "         System.out.println(\"num= \"+ num);\n",
     "      }\n",
     "   }\n",
+    "    \n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      app9_16 obj=new app9_16();\n",
+    "   }\n",
+    "\n",
     "}"
    ]
   },
@@ -5061,7 +5064,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well, what's done in the above code looks fine. Nothing appears to be wrong. If you want to use the class \"Caaa\", you must instantiate it since the modifier \"static\" is not added to it. In the code example above, he did this in the constructor of the main class, which actually looks wierd."
+    "Well, what's done in the above code looks fine. Nothing appears to be wrong. If you want to access to the class \"Caaa\", you must instantiate the outer class since the modifier \"static\" is not added to the inner class. \n",
+    "\n",
+    "Here comes the point: the modifier \"static\" can be attatched to an inner class. Hence, an inner class plays a role which is similar to a method of the outer class. \n",
+    "\n",
+    "Whenever the inner class is declaired \"static\", one does not have to instantiate the outer class in order to access it. Hoever, to access the methods of the inner class, we still have to instantiate the inner class.\n",
+    "\n",
+    "In the code example above, he did the instantiation of the inner class within the constructor of the outer class, which looks wierd in my point of view."
    ]
   },
   {
@@ -5144,9 +5153,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the way to instantiate a inner class. First instantiate the outer class, then, use the method within the outer class to instantiate the inner class. (or use the constructor of the outer class, as what the author did in e.g.13)\n",
+    "This is the way to use a method of the inner class. Class Instantiation has to be performed twice. First of all, we instantiate the outer class. After the instantiation of the outer class, we will be able to access to the method of the outer class, which is aimed for the instantiation of the inner class. (or use the constructor of the outer class, as what the author did in e.g.13). After the instantiation of the both inner and outer classes, we are able to access to the methods contained within the inner class.\n",
     "\n",
-    "Now, I wonder, there seem to be two possibilities to instantiate only one class: either make the method inside the outer class or the inner class static."
+    "Now, for me, to access to the methods of an inner class, there seem to exist two possibilities if we'd like to perform the instantiation once, instead of twice: 1. let the method inside the outer class to be static 2. let the inner class to be static.\n",
+    "\n",
+    "Let's check the first possibility quickly:"
    ]
   },
   {
@@ -5218,7 +5229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I made a mistake, i.e. using static methods to access methods or attributes of an object. This can't be done, since:"
+    "I made a mistake, i.e. I expected that a static method can access methods or attributes of an instance. This can't be done, since:"
    ]
   },
   {
@@ -5238,7 +5249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The only possibility left ( to instantiate only once) , is to make the inner class static: this is the category of static nested classes:"
+    "Then, the only possibility left ( if we'd like to perform instantiation less than twice) , is to make the inner class static: this is the category of static nested classes:"
    ]
   },
   {
@@ -5291,9 +5302,11 @@
     "    \n",
     "   public static void main(String args[])\n",
     "   {\n",
-    "         Caaa.shownothing();\n",
-    "         System.out.println(Caaa.k);\n",
-    "         Caaa.set_num(5);\n",
+    "         Caaa.shownothing();          // there is no need to do any instantiation if both the inner class\n",
+    "                                      // and the method within the inner class are static.\n",
+    "         System.out.println(Caaa.k);  // Fine. Because k is a static data. No instantiation is required.\n",
+    "         Caaa.set_num(5);             // Error. The method set_num is not static. Even if it is static, \n",
+    "                                      // we cannot ask it to access the instance-dependent variable \"num\".\n",
     "   }\n",
     "\n",
     "}"
@@ -5336,9 +5349,9 @@
     "collapsed": true
    },
    "source": [
-    "so, what's wrong above? In the above I use a \"static\" inner class but I'd like to access an instance variable \"num\" within it. A static method/inner class should be consered as a function like thing(OOP independent), hence, concepts of OOP such as instantiation are not allowed.\n",
+    "In the case shown above, the variable \"num\" is instance-dependent, which is not allowed to be accessed by a static method.\n",
     "\n",
-    "On the other hand, the variable k within the inner class is static and instantiation-independent. Therefore, we are able to access it.\n",
+    "On the other hand, the variable k within the inner class is static, i.e. instance-independent. Therefore, we are able to access it.\n",
     "\n",
     "----"
    ]
@@ -5347,7 +5360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If methods within the inner class is not static, we'll have to instantiate the inner class in order to use those methods:"
+    "If methods within the inner class are not declared as static, we'll have to instantiate the inner class in order to use those methods:"
    ]
   },
   {
@@ -5619,7 +5632,7 @@
    "source": [
     "### e.g.16: input various args to a method: \n",
     "\n",
-    "say, if we'd like to input many integers to a method, we can simply write \"int...OneIntegerName\" in the input region of the method."
+    "say, if we'd like a method to contain many integers (input variables), we can simply write \"int...xxx\" in the region of the input arguments of the method:"
    ]
   },
   {
@@ -5869,6 +5882,75 @@
    "source": [
     "!javac TestStringEx2.java\n",
     "!java TestStringEx2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 31. exercise: convert an integer array to string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ArrToStringTest.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file ArrToStringTest.java\n",
+    "\n",
+    "import java.util.Arrays;\n",
+    "\n",
+    "public class ArrToStringTest{\n",
+    "    public static void main(String args[]){\n",
+    "        int arr[]={1,2,3,4,5};\n",
+    "        System.out.println(arr.toString());\n",
+    "        System.out.println(Arrays.toString(arr));\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[I@7852e922\r\n",
+      "[1, 2, 3, 4, 5]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac ArrToStringTest.java\n",
+    "!java ArrToStringTest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from Stackoverflow: \n",
+    ">The toString method on an array only prints out the memory address, which you are getting.\n",
+    "\n",
+    "Anyway, to do this, we should use the static method Arrays.toString(stringName). (also, we should remember to import java.util.Arrays...)\n",
+    "\n",
+    "I hate Java."
    ]
   },
   {
@@ -7787,9 +7869,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
-   "language": "python",
-   "name": "Python [Root]"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": {
